fixed problem with overflow

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -31,6 +31,7 @@ body {
  border-radius: 1.25rem;
  background-color: white;
  display: grid;
+ overflow: hidden;
  grid-template-columns: repeat(2, 1fr);
  margin: 1.563rem;
 
